# codegraph-vscode

./: .eslintrc.json  .gitignore  .vscodeignore  BUILD.md  CHANGELOG.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  TODO.md  esbuild.js  log.md  package-lock.json  package.json  smithery.yaml  test_results_2026-03-08.md  tsconfig.json  vitest.config.ts  vsforge.config.json
.cargo/: config.toml
.github/workflows/: ci.yml  ci.yml.old  release.yml.old
.overstory/: config.yaml  hooks.json
codegraph-memory/: Cargo.toml
codegraph-memory/src/: error.rs  lib.rs  migration.rs  node.rs  search.rs  storage.rs  temporal.rs
codegraph-memory/src/embedding/: discovery.rs  engine.rs  fastembed_embed.rs  mod.rs  model2vec.rs
docs/: AI_TOOL_EXAMPLES.md  CODEGRAPH_TEST_RESULTS_DETAILED.md  IDE_ARCHITECTURE.md  IMPLEMENTATION_PLAN_CODE_METRICS.md  MEMORY_IMPLEMENTATION_PLAN.md  MEMORY_SYSTEM_STATUS.md  RED_TEAM_TIER2.md  UPGRADE_RECOMMENDATIONS.md  ai_agent_query_architecture.md  ai_integration_analysis.md  autonomous_ai_integration_plan.md  codegraph-memory-instructions-with-phase6.md  codegraph-vscode-design-v2.md  codegraph_capabilities_and_roadmap.md  competitive-analysis.md  directories.md  language_model_tools_implementation.md  parser_metrics_fix.md  path_debug_test.md  refactoring-plan-mcp-lsp-unification.md  test_scenarios.md  workspace_indexing_implementation.md
examples/: CLAUDE.md  claude-code-advanced.json  claude-code.json  cursor-mcp.json  cursor-rules.md  vscode-settings.jsonc
examples/github/: copilot-instructions.md
examples/github/prompts/: cg-debug.prompt.md  cg-explore.prompt.md  cg-plan-change.prompt.md  cg-query.prompt.md
mcp-package/: .gitignore  README.md  package.json  server.json
scripts/: build-binaries.ps1  build-binaries.sh  build-mcp-package.sh  build.sh  ci-checks.sh  prepare-binaries.sh
server/: Cargo.toml  build.rs
server/src/: backend.rs  branch_watcher.rs  cache.rs  custom_requests.rs  error.rs  index.rs  lib.rs  main.rs  memory.rs  model_download.rs  parser_registry.rs  runtime_deps.rs  watcher.rs
server/src/ai_query/: engine.rs  mod.rs  primitives.rs  text_index.rs
server/src/domain/: ai_context.rs  call_graph.rs  callers.rs  complexity.rs  coupling.rs  curated_context.rs  dependency_graph.rs  edit_context.rs  impact.rs  mod.rs  node_props.rs  node_resolution.rs  related_tests.rs  source_code.rs  symbol_info.rs  unused_code.rs
server/src/git_mining/: error.rs  executor.rs  miner.rs  mod.rs  parser.rs
server/src/handlers/: ai_context.rs  ai_query.rs  custom.rs  memory.rs  metrics.rs  mod.rs  navigation.rs
server/src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs
src/: extension.test.ts  extension.ts  server.test.ts  server.ts  types.ts  vsforge-host.integration.test.ts
src/ai/: chatParticipant.test.ts  chatParticipant.ts  contextProvider.test.ts  contextProvider.ts  toolManager.test.ts  toolManager.ts
src/commands/: execution.test.ts  index.test.ts  index.ts
src/views/: graphPanel.test.ts  graphPanel.ts  memoryProvider.ts  treeProviders.test.ts  treeProviders.ts
tests/lsp/: commands.test.ts
