[workspace]
resolver = "2"

members = [
    "server",
    "codegraph-memory",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/codegraph-ai/codegraph-vscode"
authors = ["CodeGraph Team"]

[workspace.dependencies]
# LSP framework
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
dashmap = "5"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
regex = "1"

# CodeGraph ecosystem
codegraph = "0.1.1"
codegraph-parser-api = "0.2.0"
codegraph-python = "0.3.1"
codegraph-rust = "0.1.2"
codegraph-typescript = "0.3.1"
codegraph-go = "0.1.3"
codegraph-c = "0.1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
