[workspace]
resolver = "2"

members = [
    "server",
    "codegraph-memory",
]

[workspace.package]
version = "0.9.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/codegraph-ai/codegraph-vscode"
authors = ["CodeGraph Team"]

[workspace.dependencies]
# LSP framework
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
dashmap = "5"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
regex = "1"
glob = "0.3"
clap = { version = "4", features = ["derive"] }


# CodeGraph ecosystem (absolute path deps from monorepo)
codegraph = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph" }
codegraph-parser-api = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-parser-api" }
codegraph-python = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-python" }
codegraph-rust = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-rust" }
codegraph-typescript = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-typescript" }
codegraph-go = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-go" }
codegraph-c = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-c" }
codegraph-java = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-java" }
codegraph-cpp = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-cpp" }
codegraph-kotlin = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-kotlin" }
codegraph-csharp = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-csharp" }
codegraph-php = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-php" }
codegraph-ruby = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-ruby" }
codegraph-swift = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-swift" }
codegraph-tcl = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-tcl" }
codegraph-verilog = { path = "/Users/anvanster/projects/codegraph-monorepo/crates/codegraph-verilog" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
